Better reporting of board availability

--- a/board_scheduler/board_scheduler.ipynb
+++ b/board_scheduler/board_scheduler.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -71,13 +71,14 @@
     "print(grid[:3])\n",
     "\n",
     "facultin.time = facultin.time.apply(lambda x: max(x,startTime))\n",
+    "#print(facultin)\n",
     "# Note that the script doesn't check times outside of start-end window, so all ins and outs should happen either\n",
     "# within this window, or before the day starts (to add or remove an entire day)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -91,9 +92,9 @@
       "     Keesing \t111011111111011111000000000000000000000000000\n",
       "   Khakhalin \t111011111111011111000000000111011111111011111\n",
       "      Perron \t111011111111011111000000000111011111111011111\n",
-      "     Bennett \t000000000000000000000000000111011111111011111\n",
+      "     Bennett \t111011111111011111000000000111011111111011111\n",
       "      Dueker \t111011111111011111000000000111011111111011111\n",
-      "        Jain \t111011111111011111000000000111011111111011111\n",
+      "        Jain \t000000000000001100000000000000000100000000000\n",
       "      Scalzo \t111011111111011111000000000111011111111011111\n"
      ]
     }
@@ -149,9 +150,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student availability:\n",
+      "           ysoeidan \tJude Coll Kees\t111111111111111111111100000111001111100111111\n",
+      "    gaauilzarqbe sve\tTibb Jude Khak\t111111111111100111111111111111111111000111111\n",
+      "         udrinea afz\tRobe Jude Kees\t111111111111111100111111111111100001000000011\n",
+      "        loaa rlimwbs\tColl Robe Kees\t110001111100111111000111111111111111111111111\n",
+      "         ktoocpe rea\tKees Coll Robe\t111111111111111100111111111111100001000000011\n",
+      "         ediacf dhni\tKhak Jude Benn\t111111111100111100111111111111111100111111111\n",
+      "         me oayncvan\tPerr Benn Khak\t111111111100000111111111111111111111111111111\n",
+      "          nabernbty \tColl Kees Perr\t100000011110001111111111111111111111111111111\n",
+      "       crdoinincub u\tBenn Perr Khak\t111111111111100111111111111111111111111100001\n",
+      "       citlccm leyah\tKees Robe Coll\t111100001100011111111111111111111111111111111\n",
+      "    npi sylloteatnro\tDuek Kees Perr\t111100011111111100111111111111111111000000011\n",
+      "    esaezotam hlhtib\tKees Coll Khak\t111111100100111111111100001111001111111111111\n",
+      "       g bbhaanyrmta\tRobe Perr Duek\t111100011111100111111111100111111100111100001\n",
+      "      hhehanr cakinr\tPerr Duek Jain\t111100011111100001111111111111100001111111111\n",
+      "         j hestlmwei\tColl Jude Benn\t111100111111100111111111111100001111111111111\n",
+      "        noiagslibuj \tJude Kees Tibb\t011111111111111111111111111111111111111111111\n",
+      " tatlmnaa aaasmecrel\tPerr Jude Scal\t111111111100111111111111111111100001111111111\n",
+      "        hlcelami euh\tJude Tibb Khak\t011100011111111111111111111111111001111111111\n",
+      "       an ellrssdiau\tKees Coll Perr\t111111111100111100111111111111001111111111111\n",
+      "     c ieehmlcoradra\tKhak Jude Benn\t111111111111100111111111111100001111111111111\n",
+      "          aiaasnt rq\tKhak Jude Benn\t111111111110001001111111111111111111111111111\n",
+      "    ejpetnesnau aeew\tPerr Benn Jain\t111100011100100001111111111111100001111111111\n",
+      "        raddn anmoyz\tRobe Perr Duek\t111111111111111111111111111111111111111111111\n",
+      "        l yeengecntd\tJude Tibb Coll\t110000001001111111111111111111111001111111111\n",
+      "       mceynagleia r\tKees Jude Khak\t111111111111100011111111111111100001111111111\n",
+      "           asemorekn\tKees Jude Khak\t100111111111111000111111111111111111111100001\n",
+      "hlizf-ketelairpnepoo \tKees Jude Khak\t111111111111111111111111111111111111111111111\n",
+      "\n",
+      "Full Board availability:\n",
+      "      hhehanr cakinr\tPerr Duek Jain\t000000000000000000000000000000000000000000000\n",
+      "    ejpetnesnau aeew\tPerr Benn Jain\t000000000000000000000000000000000000000000000\n",
+      "    gaauilzarqbe sve\tTibb Jude Khak\t000000000111000111000000000000000000000000000\n",
+      "        l yeengecntd\tJude Tibb Coll\t000000000001011111000000000000000000000000000\n",
+      "        noiagslibuj \tJude Kees Tibb\t000000000111011111000000000000000000000000000\n",
+      "        hlcelami euh\tJude Tibb Khak\t000000000111011111000000000000000000000000000\n",
+      "          nabernbty \tColl Kees Perr\t100000011110001111000000000000000000000000000\n",
+      "           asemorekn\tKees Jude Khak\t100011100111011000000000000000000000000000000\n",
+      "       citlccm leyah\tKees Robe Coll\t111000001100011111000000000000000000000000000\n",
+      "    npi sylloteatnro\tDuek Kees Perr\t111000011111011100000000000000000000000000000\n",
+      "       mceynagleia r\tKees Jude Khak\t111011100111000011000000000000000000000000000\n",
+      "         udrinea afz\tRobe Jude Kees\t111011100111011100000000000000000000000000000\n",
+      "        loaa rlimwbs\tColl Robe Kees\t110001111100011111000000000000000000000000000\n",
+      "    esaezotam hlhtib\tKees Coll Khak\t111011100100011111000000000000000000000000000\n",
+      "       an ellrssdiau\tKees Coll Perr\t111011111100011100000000000000000000000000000\n",
+      "           ysoeidan \tJude Coll Kees\t111011100111011111000000000000000000000000000\n",
+      "         ktoocpe rea\tKees Coll Robe\t111011111111011100000000000000000000000000000\n",
+      "hlizf-ketelairpnepoo \tKees Jude Khak\t111011100111011111000000000000000000000000000\n",
+      "         ediacf dhni\tKhak Jude Benn\t111011100100011100000000000000011100111011111\n",
+      "       g bbhaanyrmta\tRobe Perr Duek\t111000011111000111000000000111011100111000001\n",
+      " tatlmnaa aaasmecrel\tPerr Jude Scal\t111011100100011111000000000000000001111011111\n",
+      "         j hestlmwei\tColl Jude Benn\t111000100111000111000000000000001111111011111\n",
+      "          aiaasnt rq\tKhak Jude Benn\t111011100110001001000000000000011111111011111\n",
+      "     c ieehmlcoradra\tKhak Jude Benn\t111011100111000111000000000000001111111011111\n",
+      "       crdoinincub u\tBenn Perr Khak\t111011111111000111000000000111011111111000001\n",
+      "         me oayncvan\tPerr Benn Khak\t111011111100000111000000000111011111111011111\n",
+      "        raddn anmoyz\tRobe Perr Duek\t111011111111011111000000000111011111111011111\n"
+     ]
+    }
+   ],
    "source": [
     "class Board:\n",
     "    '''Board object'''\n",
@@ -167,7 +232,7 @@
     "        self.time = []\n",
     "        \n",
     "    def __str__(self):\n",
-    "        s = \"%25s\" % (self.student) + '\\t' \n",
+    "        s = \"%20s\" % (self.student) + '\\t' \n",
     "        s += ' '.join([m[:4] for m in self.members]) + '\\t' # Shortened version\n",
     "        s += ''.join(['%d' % i for i in self.avail])\n",
     "        return s\n",
@@ -202,25 +267,29 @@
     "          \n",
     "    \n",
     "boards = []\n",
+    "print('Student availability:')\n",
     "for ib in range(len(composition)):\n",
     "    b = Board(composition.loc[ib,])\n",
     "    b.initTimes(grid,students)\n",
-    "    b.refreshFac(faculty)\n",
+    "    print(b)\n",
     "    boards.append(b)\n",
-    "\n",
+    "    \n",
+    "for b in boards:\n",
+    "    b.refreshFac(faculty)\n",
+    "    \n",
     "# Rearrange from those that are harder to schedule to those that are easier\n",
     "niceness = [sum(b.avail) for b in boards]\n",
     "ind = [i for _,i in sorted(zip(niceness,range(len(niceness))))]\n",
-    "ind = [j for (i,j) in sorted(zip(ind,range(len(ind))))] # Resolve duplicates\n",
     "boards = [boards[i] for i in ind]\n",
     "\n",
-    "#for b in boards:\n",
-    "#    print(b)"
+    "print('\\nFull Board availability:')\n",
+    "for b in boards:\n",
+    "    print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,40 +300,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu\t14\t          aoraidehleccr m\tKhak Jude Benn\t000000000000000000000000000000000111111011111\n",
-      "Mon\t9\t                ads neyio\tJude Coll Kees\t011011100111011111000000000000000000000000000\n",
-      "Mon\t10\t         ot oylteanrinlsp\tDuek Kees Perr\t001000011111011100000000000000000000000000000\n",
-      "Mon\t11\t         blehahtemiazt os\tKees Coll Khak\t000011100100011111000000000000000000000000000\n",
-      "Thu\t13\t               anr satqia\tKhak Jude Benn\t000000000000000000000000000000000111111011111\n",
-      "Mon\t16\t               r neantbby\tColl Kees Perr\t000000001110001111000000000000000000000000000\n",
-      "Mon\t9\t             a mydnndazro\tRobe Perr Duek\t001011101111011111000000000111011111111011111\n",
-      "Mon\t13\t              ete kopacor\tKees Coll Robe\t000001101111011100000000000000000000000000000\n",
-      "Mon\t11\t            a nymbtbgarah\tRobe Perr Duek\t000000001111000111000000000111011100111000001\n",
-      "Thu\t9\t              ny mavaenoc\tPerr Benn Khak\t000000000000000000000000000011000111111011111\n",
-      "Thu\t10\t            ncdnicuuri bo\tBenn Perr Khak\t000000000000000000000000000001000111111000001\n",
-      "Mon\t17\t           ahehicark rhnn\tPerr Duek Jain\t000000000111000001000000000001000001111011111\n",
-      "Tue\t11\t             ledy tgneecn\tJude Tibb Coll\t000000000000011111000000000000000000000000000\n",
-      "Mon\t14\t            eiya lagercmn\tKees Jude Khak\t000000100110000011000000000000000000000000000\n",
-      "Thu\t15\t              etmlwijhse \tColl Jude Benn\t000000000000000000000000000000000011111011111\n",
-      "Mon\t15\t              zuaifa endr\tRobe Jude Kees\t000000000110011100000000000000000000000000000\n",
-      "Tue\t9\t               k amenrseo\tKees Jude Khak\t000000000010011000000000000000000000000000000\n",
-      "Mon\t17\t             wo llsabmari\tColl Robe Kees\t000000000000011111000000000000000000000000000\n",
-      "Tue\t10\t             jbnsiguloia \tJude Kees Tibb\t000000000000011111000000000000000000000000000\n",
-      "Mon\t13\t      lmlaatsename atcraa\tPerr Jude Scal\t000000000000011111000000000000000001111011111\n",
-      "Tue\t13\t            rni eusladsla\tKees Coll Perr\t000000000000001100000000000000000000000000000\n",
-      "Tue\t13\t             lhehmucai le\tJude Tibb Khak\t000000000000001111000000000000000000000000000\n",
-      "Tue\t14\t    olnp-fairklipht ezoee\tKees Jude Khak\t000000000000000111000000000000000000000000000\n",
-      "Tue\t15\t         iuraagvlazeqesb \tTibb Jude Khak\t000000000000000011000000000000000000000000000\n",
-      "Tue\t15\t            ccih yalltecm\tKees Robe Coll\t000000000000000011000000000000000000000000000\n",
-      "Fri\t9\t              ddiafcenih \tKhak Jude Benn\t000000000000000000000000000000000000011011111\n",
-      "Thu\t11\t         n uetpsneeewajea\tPerr Benn Jain\t000000000000000000000000000000000001011011111\n"
+      "Thu\t13\t          irtasqaa n\tKhak Jude Benn\t000000000000000000000000000000001111111011111\n",
+      "Mon\t9\t         frauednia z\tRobe Jude Kees\t011011100111011100000000000000000000000000000\n",
+      "Mon\t10\t       anbtrag mahby\tRobe Perr Duek\t001000011111000111000000000111011100111000001\n",
+      "Cannot solve the puzzle for this board:\n",
+      "      nnracrih khhae\tPerr Duek Jain\t000000000000000000000000000000000000000000000\n"
      ]
     }
    ],
