more problems + revisions

--- a/lil_problems/balanced QWER string.ipynb
+++ b/lil_problems/balanced QWER string.ipynb
@@ -58,51 +58,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "5\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = b = 5\n",
-    "print(a)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 {'Q': 1, 'W': 1, 'E': 1, 'R': 1} 4\n",
-      "0 1 {'Q': 0, 'W': 1, 'E': 1, 'R': 1} 4\n",
-      "1 1 {'Q': 1, 'W': 1, 'E': 1, 'R': 1} 1 .\n",
-      "2 1 {'Q': 1, 'W': 2, 'E': 1, 'R': 1} 0 .\n",
-      "2 2 {'Q': 1, 'W': 1, 'E': 1, 'R': 1} 0\n",
-      "3 2 {'Q': 1, 'W': 1, 'E': 2, 'R': 1} 0 .\n",
-      "3 3 {'Q': 1, 'W': 1, 'E': 1, 'R': 1} 0\n",
-      "4 3 {'Q': 1, 'W': 1, 'E': 1, 'R': 2} 0 .\n",
-      "4 4 {'Q': 1, 'W': 1, 'E': 1, 'R': 1} 0\n"
+      "0 0 {'Q': 4, 'W': 3, 'E': 0, 'R': 1} 8\n",
+      "0 1 {'Q': 4, 'W': 2, 'E': 0, 'R': 1} 8 R\n",
+      "0 2 {'Q': 3, 'W': 2, 'E': 0, 'R': 1} 8 R\n",
+      "0 3 {'Q': 3, 'W': 1, 'E': 0, 'R': 1} 8 R\n",
+      "0 4 {'Q': 3, 'W': 1, 'E': 0, 'R': 0} 8 R\n",
+      "0 5 {'Q': 2, 'W': 1, 'E': 0, 'R': 0} 8 R\n",
+      "1 5 {'Q': 2, 'W': 2, 'E': 0, 'R': 0} 5 L\n",
+      "2 5 {'Q': 3, 'W': 2, 'E': 0, 'R': 0} 4 L\n",
+      "2 6 {'Q': 2, 'W': 2, 'E': 0, 'R': 0} 4 R\n",
+      "3 6 {'Q': 2, 'W': 3, 'E': 0, 'R': 0} 4 L\n",
+      "3 7 {'Q': 1, 'W': 3, 'E': 0, 'R': 0} 4 R\n",
+      "3 8 {'Q': 1, 'W': 2, 'E': 0, 'R': 0} 4 R\n",
+      "4 8 {'Q': 1, 'W': 2, 'E': 0, 'R': 1} 4 L\n",
+      "5 8 {'Q': 2, 'W': 2, 'E': 0, 'R': 1} 4 L\n",
+      "6 8 {'Q': 3, 'W': 2, 'E': 0, 'R': 1} 3 L\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0"
+       "3"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,22 +103,30 @@
     "    out = len(s)\n",
     "    \n",
     "    print(l,r,count,out)\n",
+    "    \n",
+    "    # Look for minimal imbalanced string within the big string\n",
+    "    # To do so, first look for the leftes minimal imbalanced string\n",
+    "    # (minimal R for L==0 such that substring LR works)\n",
+    "    # Then try all right positions and for each right position find the smallest left that works\n",
+    "    # (for each R, find highest LR (which is the same as smallest |LR|) so that substring LR works)\n",
+    "    # And just keep track of all encountered |LR|, to record the min.\n",
+    "    \n",
     "    while r < len(s):\n",
-    "        count[s[r]] -= 1 # We always count n chars outside the window\n",
-    "        r += 1           # And r is never included in the window\n",
-    "        print(l,r,count,out)\n",
-    "        while l<=r and l<len(s) and all(count[c]<=len(s)/4 for c in 'QWER'): # Once all bad chars are captured by the window,\n",
+    "        count[s[r]] -= 1 # Keep count of chars outside the window\n",
+    "        r += 1           # And this one is now in the window\n",
+    "        print(l,r,count,out,'R')\n",
+    "        while l<=r and l<len(s) and all(count[c]<=len(s)/4 for c in 'QWER'): # Once all extra chars are captured by the window,\n",
     "            count[s[l]] += 1      # adjust the left edge. Throw stuff away (move left edge) while you can\n",
-    "            out = min(out,r-l)    # r is not in the window, but next after the window\n",
+    "            out = min(out,r-l)    # Any of these rows work, so keep track of minimal so far\n",
     "            l += 1\n",
-    "            print(l,r,count,out,'.')\n",
+    "            print(l,r,count,out,'L')\n",
     "        #print(l,r,count)\n",
     "            \n",
     "    return out\n",
     "    \n",
     "# Examples:\n",
-    "bs(\"QWER\")\n",
-    "#bs(\"WQWRQQQW\")\n",
+    "# bs(\"QWER\")\n",
+    "bs(\"WQWRQQQW\")\n",
     "#bs('QWERQWERQQERQQWR')"
    ]
   },
