--- a/lil_problems/time_test_exclude_element.ipynb
+++ b/lil_problems/time_test_exclude_element.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,17 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4-liner: 9.75955843925476\n",
-      "1-liner: 10.015572786331177\n",
-      "Copy-pop: 5.134293794631958\n",
-      "Slice-pop: 5.188296556472778\n"
+      "4-liner: 10.354592323303223\n",
+      "1-liner: 10.329590559005737\n",
+      "Copy-pop: 5.147294282913208\n",
+      "Copy-pop one liner: 5.026287794113159\n",
+      "Slice-del: 4.763272285461426\n",
+      "Slice-pop one liner: 5.189296722412109\n"
      ]
     }
    ],
@@ -70,9 +72,21 @@
     "tic = time.time()\n",
     "for i in range(n):\n",
     "    for j in range(len(l)):\n",
+    "        _ = l.copy().pop(j)\n",
+    "print('Copy-pop one liner:',time.time()-tic)\n",
+    "\n",
+    "tic = time.time()\n",
+    "for i in range(n):\n",
+    "    for j in range(len(l)):\n",
     "        _ = l[:]\n",
-    "        _.pop(j)\n",
-    "print('Slice-pop:',time.time()-tic)"
+    "        del _[j]\n",
+    "print('Slice-del:',time.time()-tic)\n",
+    "\n",
+    "tic = time.time()\n",
+    "for i in range(n):\n",
+    "    for j in range(len(l)):\n",
+    "        _ = l[:].pop(j)\n",
+    "print('Slice-pop one liner:',time.time()-tic)"
    ]
   }
  ],
