minor revisions in old code

--- a/classic/union_find.ipynb
+++ b/classic/union_find.ipynb
@@ -27,7 +27,7 @@
     "# Prepare the data\n",
     "nv = 20 # N nodes\n",
     "ne = nv  # N edges\n",
-    "edges = [(random.randint(0,nv-1) , random.randint(0,nv-1)) for _ in range(ne)] # An array of tuples"
+    "edges = [(random.randint(0,nv-1) , random.randint(0,nv-1)) for _ in range(ne)] # A list of tuples"
    ]
   },
   {
@@ -83,24 +83,25 @@
     "        \n",
     "        for e in edges:\n",
     "            print(e,end=' ')\n",
-    "            p0,c0 = self.parent(e[0])\n",
+    "            p0,c0 = self.parent(e[0]) # Find ur-parents for both nodes\n",
     "            p1,c1 = self.parent(e[1])\n",
-    "            if p0==p1:\n",
+    "            if p0==p1:                # If same => same component => nothing to be done\n",
     "                print('already')\n",
     "                continue\n",
-    "            if c0<c1:\n",
-    "                self.id[p0] = p1\n",
+    "            if c0<c1:                 # Pick whichever is larger,\n",
+    "                self.id[p0] = p1      # and make the king of the smaller one, a vassal of the larger\n",
     "            else:\n",
     "                self.id[p1] = p0\n",
     "            self.nComponents -= 1\n",
     "            print('connect')\n",
     "    \n",
     "    def parent(self,v):\n",
+    "        '''Find the ur-parent of node v.'''\n",
     "        c = 0\n",
-    "        while self.id[v]!=v:\n",
+    "        while self.id[v]!=v: # Until we find a node that is its own parent\n",
     "            print(f'{v}>{self.id[v]}',end=',')\n",
     "            c += 1\n",
-    "            v = self.id[v]\n",
+    "            v = self.id[v]   # Shift to this node parent\n",
     "        return (v,c)\n",
     "    \n",
     "    def __str__(self):\n",
