--- a/learning python/ch10 lists.ipynb
+++ b/learning python/ch10 lists.ipynb
@@ -343,7 +343,7 @@
    "source": [
     "a = [1,2]\n",
     "b = a\n",
-    "print(b==a)   # Valeus are the same\n",
+    "print(b==a)   # Values are the same\n",
     "print(b is a) # And objects are actually the same, as b aliased a\n",
     "print(b)\n",
     "b = [1,2]\n",
@@ -422,6 +422,58 @@
     "print(a)\n",
     "gator(a.copy()) # pass with a copy\n",
     "print(a)        # Obv no change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[0, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = a[:] # Slicing creates a copy\n",
+    "b[0] = 0\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "5\n",
+      "[[1, 2, 3], [4, 0, 6], [7, 8, 9]]\n",
+      "[4, 0, 6]\n",
+      "[[1, 2, 3], [0, 0, 0], [7, 8, 9]]\n",
+      "[7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "print(a)\n",
+    "print(a[1][1])\n",
+    "a[1][1] = 0     # This works \n",
+    "print(a)        # (it changed a)\n",
+    "print(a[1][:])\n",
+    "a[1][:] = [0]*3 # This also works (it changed a)\n",
+    "print(a)\n",
+    "print(a[1:][1]) # This does not do anything meaningful whatsoever, coz it's not numpy"
    ]
   }
  ],
