Annotations for quicksort

--- a/classic/sorting_algos.ipynb
+++ b/classic/sorting_algos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "'      !,aabcdefghjklmnoopqrstuuvwxyyz'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,12 +42,12 @@
    "source": [
     "def ss(a):\n",
     "    for i in range(len(a)):\n",
-    "        m = a[i]\n",
+    "        m = a[i]           # Current minimum\n",
     "        c = i\n",
     "        for j in range(i+1,len(a)):\n",
-    "            if a[j]<m:\n",
-    "                c = j\n",
+    "            if a[j]<m:     # Find smallest element\n",
     "                m = a[j]\n",
+    "                c = j                \n",
     "        if c>i:\n",
     "            (a[i],a[c]) = (a[c],a[i])\n",
     "    return a\n",
@@ -82,7 +82,7 @@
     "def qs(a):\n",
     "    if len(a)<=1:\n",
     "        return a\n",
-    "    n = len(a)-1               # Last element, store pivot there\n",
+    "    n = len(a)-1               # Last element will be our pivot element (see footnote)\n",
     "    l = 0                      # pointer to where small values will be shoved\n",
     "    #print(''.join(a))\n",
     "    for r in range(0,n):       # For each non-pivot\n",
@@ -93,16 +93,25 @@
     "            l += 1             # Point to the next shoving point\n",
     "\n",
     "    # By the end of this, all a<pivot are in locations<l\n",
+    "    # and all a>pivot (if any) are in l to n-1\n",
     "    \n",
-    "    #print(l,n,''.join(a))\n",
-    "    if l<n:\n",
-    "        (a[l],a[n]) = (a[n],a[l]) # If any a>pivot are present, move pivot to the border\n",
-    "        a = cs(a[:l]) + [a[l]] + cs(a[(l+1):])\n",
+    "    if l<n: # Typical case, when there are some elements >pivot\n",
+    "        (a[l],a[n]) = (a[n],a[l]) # Move pivot to its rightful place in the middle\n",
+    "        a = cs(a[:l]) + [a[l]] + cs(a[(l+1):]) # Do recursion on both halves\n",
     "    else:\n",
-    "        a = cs(a[:l]) + [a[l]]        \n",
+    "        a = cs(a[:l]) + [a[l]] # Unusual (and bad) case of pivot on the border\n",
     "    return a\n",
     "\n",
     "''.join(qs(list(row)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Footnote: actually choosing pivot smartly is a heuristic trick that helps to improve average performance of this algorithm. This version is the simplest and it works, but one can also try smarter approaches. Ideal pivot is ~median(array).\n",
+    "\n",
+    "The best thing about quisort is that it's happening in-place, and so is light on memory, yet is also fast."
    ]
   },
   {
