copy().pop() mistake fixed

--- a/lil_problems/time_test_exclude_element.ipynb
+++ b/lil_problems/time_test_exclude_element.ipynb
@@ -20,7 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = list(range(10))\n",
+    "x = l.copy(); x.pop(2)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,21 +94,9 @@
     "tic = time.time()\n",
     "for i in range(n):\n",
     "    for j in range(len(l)):\n",
-    "        _ = l.copy().pop(j)\n",
-    "print('Copy-pop one liner:',time.time()-tic)\n",
-    "\n",
-    "tic = time.time()\n",
-    "for i in range(n):\n",
-    "    for j in range(len(l)):\n",
     "        _ = l[:]\n",
     "        del _[j]\n",
-    "print('Slice-del:',time.time()-tic)\n",
-    "\n",
-    "tic = time.time()\n",
-    "for i in range(n):\n",
-    "    for j in range(len(l)):\n",
-    "        _ = l[:].pop(j)\n",
-    "print('Slice-pop one liner:',time.time()-tic)"
+    "print('Slice-del:',time.time()-tic)"
    ]
   }
  ],
