--- a/lil_problems/circular_robber.ipynb
+++ b/lil_problems/circular_robber.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,120 +41,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "314\n",
-      "183\n",
-      "False False False False False False False False False False "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# No-recursion solution\n",
-    "def Solution2(x,verbose=False):\n",
+    "# One loop solution\n",
+    "def f(x,verbose=False):\n",
+    "    '''Non-circular optimal jumper'''\n",
+    "    # In this option, f should always take x[0] (to match with the cicrular-arrangement logic\n",
+    "    # in the mother function. After that - a choice.\n",
+    "    \n",
+    "    if verbose: print('init')\n",
+    "    if len(x)==2: return max(x) # Special case; easier to implement explicitly.\n",
+    "    \n",
+    "    # For every cell, we can either claim it by jumping by 1 (j+2), or by 2 (j+3).\n",
+    "    # j+1 is forbidden, and j+4 = j+2+2, and so can always be improved by addint a stop in-between.\n",
+    "    # So for every j we need to compare opt for j-2 and j-3, and pick the greatest.\n",
+    "    # And then at the very end, we either end at n-1 (last element), or at n-2 (penultimate),\n",
+    "    # so at this point we just pick the max of two.\n",
+    "    \n",
+    "    mem = [x[0],x[1],x[0]+x[2]] # Best sums for positions 0, 1, and 2 respectively.\n",
+    "    for i in range(3,len(x)):\n",
+    "        if mem[0]>mem[1]: # Jump by 2\n",
+    "            top = mem[0]+x[i]\n",
+    "        else:\n",
+    "            top = mem[1]+x[i] # Jump by 1\n",
+    "        if verbose: print(i,x[i],top)\n",
+    "        mem = mem[1:]+[top] # Shift memory\n",
+    "    return max(mem[1],mem[2])\n",
+    "\n",
+    "def solution2(x,verbose=False):\n",
+    "    '''Circular optimal jumper'''\n",
     "    if len(x)==0: return 0\n",
     "    if len(x)==1: return x[0]\n",
-    "    opt0 = x[0]\n",
-    "    j0 = 0\n",
-    "    opt1 = x[1]\n",
-    "    j1 = 1\n",
-    "    \n",
-    "    # At every step, if prev optimization ended at j, we have an option of either claiming j+2 or j+3\n",
-    "    # (j+1 is always off-limits, while j+4 is too far, as it fits j+2 in-between).\n",
-    "    # And then we should also remember than opt0 cannot take len(x)-1, due to circularity \n",
-    "    # (it's last legal cell is len(x)-2).\n",
-    "    # Which means that opt0 halts at either l-3 or l-2; op1 halts at either l-1 or l-2.\n",
-    "    while (j0<len(x)-3):\n",
-    "        if verbose: print(j0,opt0)\n",
-    "        if(j0==len(x)-4):\n",
-    "            j0 += 2\n",
-    "            opt0 += x[j0]\n",
-    "            break\n",
-    "        t1 = opt0 + x[j0+2]\n",
-    "        t2 = opt0 + x[j0+3]\n",
-    "        if t1<t2:\n",
-    "            opt0 = t1\n",
-    "            j0 += 2\n",
-    "        else:\n",
-    "            opt0 = t2\n",
-    "            j0 += 3\n",
-    "    if verbose: print(j0,opt0)\n",
-    "            \n",
-    "    while (j1<len(x)-2):\n",
-    "        if verbose: print(j1,opt1)\n",
-    "        if(j1==len(x)-3):\n",
-    "            j1 += 2\n",
-    "            opt1 += x[j1]\n",
-    "            break\n",
-    "        t1 = opt1 + x[j1+2]\n",
-    "        t2 = opt1 + x[j1+3]\n",
-    "        if t1<t2:\n",
-    "            opt1 = t1\n",
-    "            j1 += 2\n",
-    "        else:\n",
-    "            opt1 = t2\n",
-    "            j1 += 3\n",
-    "    if verbose: print(j1,opt1)\n",
-    "            \n",
-    "    return max(opt0,opt1)\n",
-    "    \n",
-    "\n",
-    "# Tester\n",
-    "import numpy as np\n",
-    "\n",
-    "n = 10\n",
-    "a = np.random.randint(0,100,size=n).tolist()\n",
-    "\n",
-    "s1 = Solution1()\n",
-    "print(s1.rob(a))\n",
-    "print(Solution2(a))\n",
-    "\n",
-    "for i in range(10):\n",
-    "    n = np.random.randint(0,100)\n",
-    "    a = np.random.randint(0,100,size=n).tolist()\n",
-    "    print(s1.rob(a)==Solution2(a),end=' ')"
+    "    if len(x)==2: return max(x)\n",
+    "    return max(f(x[0:-1],verbose) , f(x[1:],verbose)) # Two options, to reflect the circular nature of the task"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1\n",
-      "2 4\n",
-      "1 5\n",
-      "4 7\n"
+      "[8, 48, 38]\n",
+      "Correct: 48\n",
+      "init\n",
+      "init\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "7"
+       "48"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Solution2([1,5,3,7,2],True)"
+    "x = [8, 48, 38]\n",
+    "print(x)\n",
+    "s = Solution1()\n",
+    "print('Correct:',s.rob(x))\n",
+    "solution2(x,True)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 155,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...................................................................................................."
+     ]
+    }
+   ],
    "source": [
-    "Why 4 7 here? It should be 5+7 = 13!"
+    "# Tester\n",
+    "import numpy as np\n",
+    "\n",
+    "s1 = Solution1()\n",
+    "for i in range(100):\n",
+    "    n = np.random.randint(0,10)\n",
+    "    a = np.random.randint(0,100,size=n).tolist()\n",
+    "    try:\n",
+    "        if s1.rob(a)==solution2(a):\n",
+    "            print('.',end='')\n",
+    "        else:\n",
+    "            print(a)\n",
+    "    except:\n",
+    "        print(a)"
    ]
   }
  ],
@@ -174,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
