--- a/learning python/comprehensions.ipynb
+++ b/learning python/comprehensions.ipynb
@@ -46,6 +46,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(any([bool(i % j == 0) for i in range(1,10) for j in range(1,i)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
