Food is now local

--- a/lil_problems/fix_binary_tree.ipynb
+++ b/lil_problems/fix_binary_tree.ipynb
@@ -33,8 +33,8 @@
     "# Tree\n",
     "class My_tree:\n",
     "    def __init__(self):\n",
-    "        self.links = {}\n",
-    "        self.values = []\n",
+    "        self.links = {}  # Dict of int->[int,int]\n",
+    "        self.values = [] # Dict of int (same as above)->value\n",
     "        \n",
     "    def __str__(self):\n",
     "        return self.say(0)\n",
