--- a/learning python/ch10 lists.ipynb
+++ b/learning python/ch10 lists.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,13 +59,13 @@
    ],
    "source": [
     "b = a.copy()\n",
-    "b.append(['fly','goat']) # Now we have a list of lists\n",
+    "b.append(['fly','goat']) # Now we have a list of lists.\n",
     "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-64-0669bb5f3b1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Sum works on numbers\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# But doesn't work on strings\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-0669bb5f3b1f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Sum works on numbers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# But doesn't work on strings\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
      ]
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -197,38 +197,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses', 'oeses', 'rateses', 'reses']\n",
-      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses', 'oeses', 'rateses']\n",
-      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses', 'oeses', 'rateses']\n"
+      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses', 'oeses']\n",
+      "Removed: oeses\n",
+      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses']\n",
+      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses']\n"
      ]
     }
    ],
    "source": [
+    "# On copying and popping\n",
     "print(a)\n",
     "b = a\n",
-    "b.pop() # removes last element\n",
+    "k = b.pop() # removes last element (but can also do i-th element)\n",
+    "print('Removed:',k)\n",
     "print(a) # a is now also smaller, as it was not a deep copy! Changing b changes a as well!\n",
     "print(b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses', 'oeses', 'rateses']\n",
-      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses', 'oeses']\n"
+      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses', 'goateses']\n",
+      "['bageses', 'cateses', 'dogeses', 'feses', 'flyeses', 'geses']\n"
      ]
     }
    ],
@@ -241,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bageses', 'cateses', 'dogeses', 'flyeses', 'geses', 'goateses', 'oeses']\n"
+      "['bageses', 'cateses', 'dogeses', 'flyeses', 'geses']\n"
      ]
     }
    ],
@@ -259,27 +262,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['bageses', 'cateses', 'dogeses', 'flyeses', 'geses', 'goateses', 'oeses']\n",
-      "['bageses', 'cateses', 'dogeses', 'flyeses', 'geses', 'goateses']\n"
+      "['bageses', 'cateses', 'dogeses', 'flyeses', 'geses']\n",
+      "['bageses', 'cateses', 'dogeses', 'flyeses']\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-23-feaa5206b19e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'geses'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Removes a target element by value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'nugget'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Error if not present!\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
      ]
     }
    ],
    "source": [
     "print(b)\n",
-    "b.remove('oeses') # Removes a target element\n",
-    "print(b)"
+    "b.remove('geses') # Removes a target element by value\n",
+    "print(b)\n",
+    "b.remove('nugget') # Error if not present! Better wrap in if?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +310,7 @@
    "source": [
     "c = [1,2,3]*2\n",
     "print(c)\n",
-    "c.remove(1) # Only removes first instance! Hmm.\n",
+    "c.remove(1) # Only removes the first instance! Hmm.\n",
     "print(c)\n",
     "c.remove(1)\n",
     "print(c)"
@@ -303,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -317,15 +332,16 @@
     }
    ],
    "source": [
+    "# Breaking strings\n",
     "a = 'dog eats birds'\n",
     "print(list(a)) # Breaks a string into a list of chars\n",
-    "print(a.split()) # Breaks into a list of words\n",
+    "print(a.split()) # Breaks a string into a list of words\n",
     "print(a.split('d')) # Breaks by a non-space char"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -348,12 +364,12 @@
     "print(b)\n",
     "b = [1,2]\n",
     "print(b==a)   # Values are still the same\n",
-    "print(b is a) # But the objects are now differen! False!"
+    "print(b is a) # But the objects are now different! So returns False!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -366,43 +382,46 @@
     }
    ],
    "source": [
+    "# Arguments are passed to functions by reference!\n",
     "def gator(b):\n",
     "    b[0] = 0\n",
     "\n",
     "a = [1,2,3]\n",
     "print(a)\n",
-    "gator(a) # This changes the value of a, as if it passed a reference to an object\n",
+    "gator(a) # This changes the value of a, as the function got a reference to an object\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n",
-      "[1, 2, 3]\n"
+      "Original: [1, 2, 3]\n",
+      "Inside: [0, 2, 3]\n",
+      "After: [1, 2, 3]\n"
      ]
     }
    ],
    "source": [
     "def skunk(b):\n",
-    "    b = b[0:len(b)] # Slicing created a NEW object\n",
+    "    b = b[:] # Slicing created a NEW object, even though it was a full slicing\n",
     "    b[0] = 0        # This object was changed\n",
+    "    print('Inside:', b)\n",
     "    \n",
     "a = [1,2,3]\n",
-    "print(a)\n",
+    "print('Original:', a)\n",
     "skunk(a) # But the original object wasn't changed, in this case!\n",
-    "print(a)"
+    "print('After:', a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -420,30 +439,8 @@
     "\n",
     "a = [1,2,3]\n",
     "print(a)\n",
-    "gator(a.copy()) # pass with a copy\n",
+    "gator(a.copy()) # Pass with a copy\n",
     "print(a)        # Obv no change"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "[0, 2, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [1,2,3]\n",
-    "b = a[:] # Slicing creates a copy\n",
-    "b[0] = 0\n",
-    "print(a)\n",
-    "print(b)"
    ]
   },
   {
@@ -475,6 +472,76 @@
     "print(a)\n",
     "print(a[1:][1]) # This does not do anything meaningful whatsoever, coz it's not numpy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6]\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# All and any\n",
+    "a = list(range(7))\n",
+    "print(a)\n",
+    "print(any([i==2 for i in a]))\n",
+    "print(any([i==7 for i in a]))\n",
+    "print(all([i==2 for i in a]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Same with numberz\n",
+    "print(any([0,0,1]))\n",
+    "print(any([0,0,2]))\n",
+    "print(all([0,1,2]))\n",
+    "print(all([1,-2,3])) # Anything that is not 0, is a True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 2, 2, 3, 3, 3, 3]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Counting\n",
+    "a = [i for j in range(5) for i in [j-1]*j]\n",
+    "print(a)\n",
+    "print(a.count(3))"
+   ]
   }
  ],
  "metadata": {
@@ -493,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
